[gd_scene load_steps=18 format=2]

[ext_resource path="res://UI/between_attack_menu/assets/menu.png" type="Texture" id=1]
[ext_resource path="res://UI/Controls/ButtonsPanel.gd" type="Script" id=2]
[ext_resource path="res://UI/Controls/ButtonPanelGroup.tres" type="ButtonGroup" id=3]
[ext_resource path="res://UI/Controls/Attack.gd" type="Script" id=4]
[ext_resource path="res://UI/Controls/ButtonHandlers/Act.gd" type="Script" id=5]
[ext_resource path="res://UI/Controls/ButtonHandlers/Item.gd" type="Script" id=6]
[ext_resource path="res://UI/Controls/ButtonHandlers/Spare.gd" type="Script" id=7]
[ext_resource path="res://UI/Controls/ButtonHandlers/Defense.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 952, 96.9218, 31, 26.0782 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 985.741, 97.1119, 29.5904, 25.8691 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 775.104, 317.753, 31.2414, 26.2825 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 809.801, 317.403, 31.1719, 26.5878 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 1083.92, 61.9767, 31.3583, 32.6337 )

[sub_resource type="StyleBoxTexture" id=7]
texture = SubResource( 6 )
region_rect = Rect2( 0, 0, 1, 1 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 1083.68, 61.4348, 31.3774, 32.727 )

[sub_resource type="StyleBoxTexture" id=9]
texture = SubResource( 8 )
region_rect = Rect2( 0, 0, 1, 1 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 845.221, 317.953, 30.6221, 26.0362 )

[node name="ButtonsPanel" type="NinePatchRect"]
anchor_top = -0.027
anchor_right = 0.311
anchor_bottom = 0.06
margin_top = 16.2
margin_right = -0.463989
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Buttons" type="HBoxContainer" parent="."]
margin_left = 23.0
margin_top = 1.0
margin_right = 301.0
margin_bottom = 49.0
custom_constants/separation = -6

[node name="Attack" type="Button" parent="Buttons"]
margin_right = 60.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = ExtResource( 3 )
icon = SubResource( 2 )
expand_icon = true
script = ExtResource( 4 )

[node name="Act" type="Button" parent="Buttons"]
margin_left = 54.0
margin_right = 114.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = ExtResource( 3 )
icon = SubResource( 10 )
expand_icon = true
script = ExtResource( 5 )

[node name="Item" type="Button" parent="Buttons"]
margin_left = 108.0
margin_right = 169.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = ExtResource( 3 )
icon = SubResource( 3 )
expand_icon = true
script = ExtResource( 6 )

[node name="Spare" type="Button" parent="Buttons"]
margin_left = 163.0
margin_right = 223.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
group = ExtResource( 3 )
icon = SubResource( 4 )
expand_icon = true
script = ExtResource( 7 )

[node name="Defense" type="Button" parent="Buttons"]
margin_left = 217.0
margin_right = 278.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 9 )
group = ExtResource( 3 )
icon = SubResource( 5 )
expand_icon = true
script = ExtResource( 8 )

[connection signal="button_down" from="Buttons/Attack" to="." method="_on_Attack_button_down"]
[connection signal="button_down" from="Buttons/Act" to="." method="_on_Act_button_down"]
[connection signal="button_down" from="Buttons/Item" to="." method="_on_Item_button_down"]
[connection signal="button_down" from="Buttons/Spare" to="." method="_on_Spare_button_down"]
[connection signal="button_down" from="Buttons/Defense" to="." method="_on_Defense_button_down"]
